// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconStar /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconStar /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconStar /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconStar /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconStar /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconStar /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconStar /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M131.9 184.4l-50.7 27.9c-.9.5-1.8.9-2.6 1.1-.7.2-1.3.4-1.8.4-2 0-3.3-.7-4-2.2-.7-1.5-.9-3.6-.7-6.2l10-59.1-41.2-41.9c-2.4-2.7-3.4-5.1-2.8-7.2.6-2.1 2.6-3.4 6.1-3.9l56.9-8.8 25.3-54c.7-1.5 1.6-2.6 2.6-3.5.9-.9 2.1-.9 3-.9"
      fill="currentColor"
    />
      
    <path
      d="M131 184.7l51.5 27.6c1 .5 1.9.9 2.6 1.1.7.2 1.5.4 2.2.4 1.7 0 2.9-.7 3.6-2.2.7-1.5.9-3.6.7-6.2l-10-59 41.2-41.9c2.4-2.7 3.4-5.1 2.8-7.2-.6-2.1-2.7-3.4-6.1-3.9l-57-8.8-25.3-54c-.8-1.4-1.7-2.6-2.6-3.5-.9-.9-2.7-.9-3.7-.9"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
